gap between cta fixed

--- a/Moorings/TMUS_Checkout_Mobile_Sticky_CTA/variation2/variation.css
+++ b/Moorings/TMUS_Checkout_Mobile_Sticky_CTA/variation2/variation.css
@@ -71,8 +71,12 @@
 
     .eg-cta-container {
         display: flex;
-        gap: 4px;
+        gap: 36px;
         justify-content: space-between;
+    }
+
+    .eg-cta-container>* {
+        flex: 1;
     }
 
     .eg-cta-container .share-quote {
@@ -98,7 +102,7 @@
         text-align: center;
         color: #000 !important;
         border-radius: 6px;
-        display:block !important;
+        display: block !important;
         text-decoration: none !important;
     }
 }
